# Inside of setup.cfg
[metadata]
name = py2http
version = 0.1.27
url = https://github.com/i2mint/py2http
root_url = https://github.com/i2mint
platforms = any
description = Declarative HTTP service entry point.
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
author = Otosense
license = MIT
description-file = README.md
keywords =
    http service
    web service
copyright =
		2020
		Otosense
display_name = Py2http

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    bottle==0.12.18
    PyJWT
    aiohttp==3.6.2
    i2
    glom==20.8.0
    requests==2.24.0
